[package]
name = "uprotocol_zenoh"
version = "0.1.0"
edition = "2021"

[lints.clippy]
all = "deny"
pedantic = "deny"
#cargo = "deny"
#restriction = "deny"
#nursery = "deny"

[dependencies]
up-rust = { git = "https://github.com/eclipse-uprotocol/up-rust", branch = "cb5deec4581eb6c386941f54e7e33488060fb36a" }
prost = "0.12"
prost-types = "0.12"
protobuf = { version = "3.3" }
zenoh = { version = "0.10.1-rc", features = ["unstable"]}
async-trait = "0.1"
async-std = "1.12.0"
anyhow = "1.0.75"
chrono = "0.4.31"
